# grainlify

./: .gitignore
contracts/: Cargo.toml  DELEGATE_PERMISSION_MATRIX.md  SECURITY_NOTES.md  bounty-escrow-manifest.json  contract-manifest-schema.json  grainlify-core-manifest.json  package-lock.json
contracts/bounty_escrow/: Cargo.toml  goldens.out  stderr.out  stdout.out
contracts/bounty_escrow/contracts/escrow/: Cargo.toml  FRONT_RUNNING_TESTS.md  RENEWAL_POLICY.md  UPGRADE_SAFETY.md
contracts/grainlify-core/: Cargo.toml
contracts/grainlify-core/src/: commit_reveal.rs  error_registry.rs  governance.rs  lib.rs  multisig.rs  pseudo_randomness.rs  test_error_registry.rs  test_performance_stats.rs  test_pseudo_randomness.rs  test_serialization_compatibility.rs  test_storage_layout.rs
contracts/grainlify-core/src/test/: build_info_event_tests.rs  upgrade_rollback_tests.rs  upgrade_timelock_tests.rs
contracts/grainlify-core/tests/: test_storage_layout.rs
contracts/program-escrow/: Cargo.toml
contracts/program-escrow/src/: error_recovery.rs  gas_optimization.rs  lib.rs  reentrancy_guard_standalone_test.rs  test.rs  test_circuit_breaker_audit.rs  test_draft_state.rs  test_error_discrimination.rs  test_fee_on_transfer.rs  test_metadata_tagging.rs  test_pause.rs
contracts/program-escrow/test_snapshots/test/: test_batch_payout_empty_batch_panic.1.json  (+4 more)
contracts/scripts/: test_all_script_failures.sh  test_deploy_failures.sh  test_upgrade_failures.sh  validate_seed_file.py
contracts/src/: lib.rs  storage_collision_tests.rs  storage_key_audit.rs
(+338 files in other folders)
